--- a/web/css/style.css
+++ b/web/css/style.css
@@ -192,3 +192,39 @@ footer>.container-fluid{
 	color:red;
 	z-index: 10000;
 }
+.wrapper+.container{
+}
+.product_item{
+	padding:10px;
+
+}
+.product_item header{
+	min-height: 200px;
+	padding:10px;
+}
+.product{
+	border:1px solid #428bca;
+	border-radius:2px;
+
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+	-webkit-transition-property: transform;
+	transition-property: transform;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+
+}
+.product:hover{
+	-webkit-transform: translateY(-5px);
+	transform: translateY(-5px);
+	border-color:rgba(255, 59, 0, 0.45);
+}
+.product_item img{
+	width:100%;
+}
+.wrapper .breadcrumb{
+	width:90%;
+	margin:0 auto;
+	margin-bottom:20px;
+}
