--- a/web/css/style.css
+++ b/web/css/style.css
@@ -355,3 +355,10 @@ margin:0;
 .podrobnee a:hover{
 	background-color: transparent;
 }
+.tovar_buttons a:hover{
+	background-color:transparent;
+}
+.vid{
+	margin-left:10px;
+	margin-bottom:20px;
+}
