--- a/web/css/slick.css
+++ b/web/css/slick.css
@@ -8,10 +8,10 @@
     -moz-box-sizing: border-box;
          box-sizing: border-box;
 
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
+    /*-webkit-user-select: none;*/
+       /*-moz-user-select: none;*/
+        /*-ms-user-select: none;*/
+            /*user-select: none;*/
 
     -webkit-touch-callout: none;
     -khtml-user-select: none;
